# meilisearch-mcp

./: CICD_NOTES.md  CLAUDE.md  Dockerfile  PRODUCTION_READINESS.md  pyproject.toml  requirements-dev.txt
src/meilisearch_mcp/: chat.py  client.py  config.py  context.py  documents.py  http_client.py  indexes.py  keys.py  monitoring.py  security.py  server.py  settings.py  tasks.py
src/meilisearch_mcp/tools/: __init__.py  chat.py  connection.py  documents.py  indexes.py  keys.py  monitoring.py  search.py  settings.py  tasks.py
tests/: test_config.py  test_context.py  test_http_client.py  test_mcp_client.py  test_security.py
