[project]
name = "meilisearch-mcp"
version = "0.6.0"
description = "MCP server for Meilisearch"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.12.4",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "aiohttp>=3.9.0",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project.scripts]
meilisearch-mcp = "meilisearch_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/meilisearch_mcp"]

[tool.pytest.ini_options]
pythonpath = [
    "."
]
testpaths = [
    "tests"
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
